# git-pincer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  _typos.toml  cliff.toml  deny.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  playground.rs
fixtures/: conflict.txt  conflict_rich.txt
locales/: en.conf  zh.conf
npm/: build.mjs
npm/git-pincer/: package.json
src/: app.rs  cli.rs  config.rs  git.rs  i18n.rs  lib.rs  main.rs  merge.rs  ui.rs
src/commands/: abort.rs  completions.rs  file.rs  menu.rs  mod.rs  resolve.rs  run.rs
src/ui/: chrome.rs  highlight.rs  keymap.rs  logo.ans  menu.rs  mod.rs  panes.rs  rows.rs  theme.rs
tests/: git_flow.rs
