[package]
name = "git-pincer"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["Zero <1143967454@qq.com>"]
description = "A simple and compact Git CLI, mainly used for resolving conflicts."
documentation = "https://docs.rs/git-pincer"
repository = "https://github.com/zlx2019/git-pincer"
readme = "README.md"
license = "MIT"
keywords = ["git", "git-cli", "tui"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
similar = "3.1"
ratatui = "0.30"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-fancy"] }

[dev-dependencies]

[build-dependencies]

[features]


[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"

[workspace]
members = []

[profile.release]

[profile.dev]
