[package]
name = "git-pincer"
version = "0.1.3"
edition = "2024"
rust-version = "1.96.0"
authors = ["Zero <zero9501@outlook.com>"]
description = "A simple and efficient terminal Git conflict resolution CLI tool."
documentation = "https://docs.rs/git-pincer"
repository = "https://github.com/zlx2019/git-pincer"
readme = "README.md"
license = "MIT"
keywords = ["git", "git-cli", "tui"]
categories = ["command-line-utilities", "development-tools"]
include = ["/src", "/locales", "/Cargo.toml", "/README.md", "/LICENSE"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
similar = "3.1"
ratatui = "0.30"
unicode-width = "0.2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-fancy"] }
sys-locale = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
clap_complete = "4.6.7"

[dev-dependencies]

[build-dependencies]

[features]


[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"

[workspace]
members = []

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
